--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <div class="profile-thumb"></div>
-            <h1>Sakthi</h1>
+            <h1>S Manikandan</h1>
             <h3>Web Developer / Designer</h3>
         </div>
     </header>
@@ -21,16 +21,17 @@
             <div class="row">
                 <div class="col-md-4">
                     <ul class="info">
-                        <li><span>Full Name:</span>Sakthi</li>
-                        <li><span>Phone:</span>+ 1234 567 890</li>
-                        <li><span>Email:</span>Sakthi111@gmail.com</li>
-                        <li><span>Address:</span>Your address</li>
+                        <li><span>Full Name:</span>S.Manikandan</li>
+                        <li><span>Phone:</span>+ 9025292672</li>
+                        <li><span>Email:</span>suryaalfayt@gmail.com</li>
+                        <li><span>Address:</span>Sothupakkam</li>
                     </ul>
                 </div>
                 <div class="col-md-8">
                     <h2>Hello There!</h2>
-                    <p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-                    <p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+                    <p>Seeking innovation and challenging career in a growing organization which gives me an opportunity to utillieze my skills and knowledge and
+provides me opportunity for career growth
+</p>
                 </div>
             </div>
         </div>
@@ -38,8 +39,7 @@
 
     <section id="resume">
         <div class="container">
-            <button class=" btn btn-primary"><a href=".pdf">My Resume</a></button>
-            <div class="row">
+            <button class=" btn btn-primary"><a href=".pdf">My Rsume</a><button>
                 <div class="col-md-12">
                     <ul class="timeline">
                         <li>
@@ -47,22 +47,22 @@
                             <div class="timeline-panel">
                                 <h3>Courses</h3>               
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>python</li>
+                                    <li>data structure</li>
+                                    <li>c++</li>
+                                    <li>HTML</li>
                                 </ul>
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-badge"><i class="icon-suitcase"></i></div>
+                            <div class="timeline-badge">< class="icn-suitase"></i></div>
                             <div class="timeline-panel">
                                 <h3>Skills</h3>
                                 <ul>
                                     <li>HTML</li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>basics python</li>
+                                    <li>basic java</li>
+                                    <li>data analysis</li>
                                 </ul>
                             </div>
                         </li>
@@ -78,4 +78,5 @@
         </div>
     </footer>
 </body>
+
 </html>
