--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ provides me opportunity for career growth
 
     <section id="resume">
         <div class="container">
-            <button class=" btn btn-primary"><a href=".pdf">My Rsume</a><button>
+            <button class=" btn btn-primary"><a href="Resme.pdf">My Rsume</a><button>
                 <div class="col-md-12">
                     <ul class="timeline">
                         <li>
@@ -80,3 +80,4 @@ provides me opportunity for career growth
 </body>
 
 </html>
+
