--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ provides me opportunity for career growth
     <section id="resume">
         <div class="container">
             <button class=" btn btn-primary"><a href="Resme.pdf">My Rsume</a><button>
+                <div class="row">
                 <div class="col-md-12">
                     <ul class="timeline">
                         <li>
@@ -80,4 +81,5 @@ provides me opportunity for career growth
 </body>
 
 </html>
+
 
