--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ provides me opportunity for career growth
 
     <section id="resume">
         <div class="container">
-            <button class=" btn btn-primary"><a href="Resme.pdf">My Rsume</a><button>
+            <button class=" btn btn-primary"><a href="Resume.pdf">My Resume</a><button>
                 <div class="row">
                 <div class="col-md-12">
                     <ul class="timeline">
@@ -48,7 +48,7 @@ provides me opportunity for career growth
                             <div class="timeline-panel">
                                 <h3>Courses</h3>               
                                 <ul>
-                                    <li>python</li>
+                                    <li>office tool</li>
                                     <li>data structure</li>
                                     <li>c++</li>
                                     <li>HTML</li>
@@ -81,6 +81,7 @@ provides me opportunity for career growth
 </body>
 
 </html>
+
 
 
 
