--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ provides me opportunity for career growth
                                 <h3>Courses</h3>               
                                 <ul>
                                     <li>office tool</li>
-                                    <li>data structure</li>
-                                    <li>c++</li>
                                     <li>HTML</li>
+                                    <li>data analysis/li>
+                                    
                                 </ul>
                             </div>
                         </li>
@@ -61,9 +61,9 @@ provides me opportunity for career growth
                                 <h3>Skills</h3>
                                 <ul>
                                     <li>HTML</li>
-                                    <li>basics python</li>
-                                    <li>basic java</li>
-                                    <li>data analysis</li>
+                                    <li>CSS</li>
+                                    <li>java script</li>
+                                    <li>python</li>
                                 </ul>
                             </div>
                         </li>
@@ -81,6 +81,7 @@ provides me opportunity for career growth
 </body>
 
 </html>
+
 
 
 
