--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ provides me opportunity for career growth
 
     <section id="resume">
         <div class="container">
-            <button class=" btn btn-primary"><a href="Resume.jpj">My Resume</a><button>
+            <button class=" btn btn-primary"><a href="Resume.jpg">My Resume</a><button>
                 <div class="row">
                 <div class="col-md-12">
                     <ul class="timeline">
@@ -81,6 +81,7 @@ provides me opportunity for career growth
 </body>
 
 </html>
+
 
 
 
